@@ -1,3 +1,10 @@
+2011-03-21 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/ds390/gen.c (genRet): forgot the _endLazyDPSEvaluation
+	* support/regression/compact-results.py: new, added
+	* support/regression/Makefile.in: print test name and compact results after
+	  running the test for better progress insight with make -j
+
 2011-03-21 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCval.c, src/SDCCval.h, src/SDCCast.c: dbuf-ized
